--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galaxy WebGPU</title>
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <canvas id="galaxy" width="640" height="480"></canvas>
